# openpawz

./: .gitignore  .paw-architecture.md  CONTRIBUTING.md  ENGRAM.md  README.md  README.zh-CN.md  index.html  package.json  pnpm-lock.yaml
..bfg-report/2026-03-06/02-24-09/: cache-stats.txt  changed-files.txt  object-id-map.old-new.txt
.github/workflows/: ci.yml  release.yml
channels/: discord.mdx
docs/: benchmarks.md  channel-bridge-guide.md  cli.md  engine-module-guide.md  frontend-patterns.md  hybrid-oauth-architecture.md  oauth-app-registration.md  oauth-registration-checklist.md
guides/: agents.mdx  content-studio.mdx  foundry.mdx  memory.mdx  pricing.mdx
providers/: openai.mdx  overview.mdx
reference/: architecture.mdx  conductor-protocol.mdx  security.mdx
scripts/: credential-schemas.json  extract-n8n-credentials.mjs  generate-credential-data.mjs  integration-smoke-test.sh  pre-commit  pre-push  prepare-hooks.js
src/: main.ts  security.ts
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/crates/openpawz-bench/: Cargo.toml
src-tauri/crates/openpawz-bench/benches/: audit_bench.rs  cognitive_bench.rs  engram_bench.rs  memory_bench.rs  platform_bench.rs  reasoning_bench.rs  security_bench.rs  session_bench.rs
src-tauri/crates/openpawz-bench/src/: lib.rs
src-tauri/crates/openpawz-cli/: Cargo.toml
src-tauri/crates/openpawz-cli/src/: main.rs
src-tauri/crates/openpawz-cli/src/commands/: agent.rs  bench.rs  config.rs  engram.rs  memory.rs  metrics.rs  mod.rs  providers.rs  session.rs  setup.rs  status.rs
src-tauri/crates/openpawz-core/: Cargo.toml
src-tauri/crates/openpawz-core/src/: lib.rs
src-tauri/crates/openpawz-core/src/atoms/: constants.rs  engram_types.rs  error.rs  mod.rs  traits.rs  types.rs
src-tauri/crates/openpawz-core/src/engine/: audit.rs  http.rs  injection.rs  mod.rs  paths.rs  pricing.rs  provider_registry.rs  registrations.json  types.rs  util.rs
src-tauri/crates/openpawz-core/src/engine/constrained/: atoms.rs  mod.rs  molecules.rs
src-tauri/crates/openpawz-core/src/engine/engram/: abstraction_tree.rs  bridge.rs  cognitive_event.rs  community_detection.rs  consolidation.rs  context_builder.rs  context_continuity.rs  dream_replay.rs  emotional_memory.rs  encryption.rs  entity_tracking.rs  gated_search.rs  graph.rs  hnsw.rs  hybrid_search.rs  intent_classifier.rs  memory_bus.rs  memory_fusion.rs  metadata_inference.rs  mod.rs  model_caps.rs  recall_tuner.rs  reranking.rs  schema.rs  sensory_buffer.rs  skill_library.rs  tokenizer.rs  working_memory.rs
src-tauri/crates/openpawz-core/src/engine/memory/: embedding.rs  mod.rs  ollama.rs
src-tauri/crates/openpawz-core/src/engine/providers/: google.rs  mod.rs  openai.rs
src-tauri/crates/openpawz-core/src/engine/sessions/: agent_files.rs  agent_messages.rs  canvas.rs  community_skills.rs  config.rs  dashboard_tabs.rs  dashboard_windows.rs  dashboards.rs  embedding.rs  engram.rs  flows.rs  messages.rs  mod.rs  positions.rs  projects.rs  schema.rs  sessions.rs  skill_outputs.rs  skill_storage.rs  skill_vault.rs  squads.rs  tasks.rs  telemetry.rs  templates.rs  trades.rs
src-tauri/src/: atoms.rs  lib.rs
src-tauri/src/atoms/: constants.rs  engram_types.rs  types.rs
src-tauri/src/commands/: audit.rs  canvas.rs  chat.rs  dashboard_tabs.rs  export.rs  integrations.rs  mail.rs  memory.rs  mod.rs  n8n.rs  oauth.rs  queries.rs  utility.rs
src-tauri/src/engine/: audit.rs  chat.rs  compaction.rs  constrained.rs  engram.rs  events.rs  http.rs  injection.rs  key_vault.rs  memory.rs  mod.rs  oauth.rs  paths.rs  pricing.rs  provider_registry.rs  providers.json  providers.rs  routing.rs  sessions.rs  state.rs  swarm.rs  tasks.rs  tool_index.rs  types.rs  util.rs
src-tauri/src/engine/agent_loop/: helpers.rs  mod.rs
src-tauri/src/engine/channels/: agent.rs
src-tauri/src/engine/engram/: abstraction_tree.rs  bridge.rs  cognitive_state.rs  community_detection.rs  consolidation.rs  context_builder.rs  dream_replay.rs  encryption.rs  gated_search.rs  graph.rs  memory_bus.rs  meta_cognition.rs  mod.rs  model_caps.rs  retrieval_quality.rs  schema.rs  temporal_search.rs  working_memory.rs
src-tauri/src/engine/mcp/: client.rs  registry.rs  types.rs
src-tauri/src/engine/memory/: embedding.rs
src-tauri/src/engine/n8n_engine/: docker.rs  health.rs  mod.rs  node_provision.rs  process.rs  types.rs
src-tauri/src/engine/nostr/: mod.rs
src-tauri/src/engine/orchestrator/: agent_loop.rs  mod.rs  sub_agent.rs
src-tauri/src/engine/prompts/: foreman.md  platform.md
src-tauri/src/engine/providers/: anthropic.rs  mod.rs  openai.rs
src-tauri/src/engine/sessions/: canvas.rs  engram.rs  memories.rs  messages.rs  schema.rs  squads.rs
src-tauri/src/engine/skills/: builtins.rs  crypto.rs  prompt.rs  vault.rs
src-tauri/src/engine/skills/community/: store.rs  types.rs
src-tauri/src/engine/tools/: agent_comms.rs  canvas.rs  coinbase.rs  exec.rs  fetch.rs  filesystem.rs  google.rs  integrations.rs  memory.rs  mod.rs  n8n.rs  request_tools.rs  skill_output.rs  telegram.rs  worker_delegate.rs
src-tauri/src/engine/tools/discourse/: admin.rs  categories.rs  mod.rs  posts.rs  search.rs  topics.rs  users.rs
src-tauri/tests/: loop_detection.rs
src/components/: chat-mission-panel.ts  helpers.test.ts  helpers.ts  integrations-panel.ts  tesseract.ts
src/components/molecules/: canvas-tabs.ts  hil_modal.ts
src/components/notifications/: atoms.ts  index.ts  molecules.ts
src/state/: index.ts
src/styles/: _agents.css  _buttons.css  _canvas-tabs.css  _canvas.css  _chat-mission.css  _chat.css  _community-browser.css  _components.css  _credentials.css  _empty-state.css  _flows.css  _forms.css  _ide.css  _inbox-conv.css  _inbox-sidebar.css  _inbox-thread.css  _inbox.css  _integrations.css  _lock-screen.css  _memory-palace.css  _mini-chat.css  _notifications.css  _reset.css  _responsive.css  _settings-ext.css  _settings.css  _tesseract.css  _today.css  _tokens.css  index.css
src/views/: lock-screen.ts  settings-storage.ts
start/: features.mdx  first-provider.mdx
(+112 files in other folders)
