[package]
name = "openpawz"
version = "0.1.0"
description = "Multi-agent AI desktop app — 10 providers, 11 channels, hybrid memory, 10 security layers. Fully local, open source."
authors = ["OpenPawz Contributors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/OpenPawz/openpawz"
homepage = "https://openpawz.com"
readme = "../README.md"
keywords = ["ai", "agent", "tauri", "multi-agent", "llm"]
categories = ["command-line-utilities", "gui"]
autobenches = false
autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "paw_temp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-log = { version = "2", features = ["colored"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
log = "0.4"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
keyring = { version = "3", features = ["apple-native", "linux-native"] }
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8", "pem"] }
sha2 = "0.10"
hmac = "0.12"
subtle = "2"
jsonwebtoken = "9"
p256 = { version = "0.13", features = ["ecdsa", "pem"] }
base64 = "0.22"

# ── Paw Agent Engine ──────────────────────────────────────────────
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "cookies", "multipart"], default-features = false }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.32", features = ["bundled"] }
urlencoding = "2"
paste = "1"

# ── Web Browsing & Scraping ──────────────────────────────────────
headless_chrome = "1"
scraper = "0.25"
url = "2"

# ── Channel Bridges (WebSocket + IRC) ───────────────────────────
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
webpki-roots = "1.0"

# ── Container Sandboxing (Docker) ───────────────────────────────
bollard = "0.16"

# ── Matrix E2EE (Olm/Megolm via vodozemac) ──────────────────────
matrix-sdk = { version = "0.10", default-features = false, features = ["e2e-encryption", "rustls-tls", "sqlite"] }

# ── DEX / Ethereum Wallet ──────────────────────────────────────
k256 = { version = "0.13", features = ["ecdsa", "schnorr", "ecdh"] }
tiny-keccak = { version = "2", features = ["keccak"] }

# ── NIP-04 Encrypted DMs (AES-256-CBC) ──────────────────────────
aes = "0.8"
cbc = "0.1"

# ── Skill Vault Encryption (AES-256-GCM) ────────────────────────
aes-gcm = "0.10"

# ── Secure memory zeroing ───────────────────────────────────────
zeroize = { version = "1", features = ["derive"] }

# ── PII detection (memory encryption / GDPR) ────────────────────
regex = "1"

# ── Solana DEX Trading ───────────────────────────────────────
bs58 = "0.5"

# ── Mutex safety (no poisoning, faster, const-constructible) ─
parking_lot = "0.12"
rustls-pemfile = "2"
hkdf = "0.12"

# ── Telemetry & Tracing (Canvas Phase 5) ─────────────────────
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── Tests: single binary to avoid OOM on codespace ──────────
[[test]]
name = "integration"
path = "tests/integration.rs"
