[package]
name = "openpawz-core"
version = "0.1.0"
description = "Core engine library for OpenPawz — types, sessions, memory, and pure business logic."
edition = "2021"
license = "MIT"

[dependencies]
# ── Serialization ──
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Error handling ──
thiserror = "2"
async-trait = "0.1"

# ── Database ──
rusqlite = { version = "0.32", features = ["bundled"] }

# ── HTTP client ──
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "cookies", "multipart"], default-features = false }

# ── Async runtime ──
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# ── Logging ──
log = "0.4"

# ── Date/Time ──
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# ── IDs ──
uuid = { version = "1", features = ["v4"] }

# ── Filesystem paths ──
dirs = "6"

# ── Keychain ──
keyring = { version = "3", features = ["apple-native", "linux-native"] }

# ── Cryptography ──
sha2 = "0.10"
hmac = "0.12"
zeroize = { version = "1", features = ["derive"] }
aes-gcm = "0.10"
hkdf = "0.12"
rand = "0.8"
subtle = "2"

# ── Concurrency ──
parking_lot = "0.12"

# ── TLS ──
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
webpki-roots = "1.0"

# ── URL encoding ──
urlencoding = "2"

# ── Regex (injection detection) ──
regex = "1"

# ── Base64 ──
base64 = "0.22"
